# Conductor_bot

./: .gitignore  Blueprint (Технико-архитектурный план) Conductor.md  README.md  README.ru.md  TESTING_GUIDE.ru.md  White Paper Conductor.md  api_test_client.py  docker-compose.yml  run.py
answers_from_jules/: interaction_flow.ru.md
chatbot_app/: README.md  app.py  requirements.txt  tts_adapter.py
conductor/: README.md  config.py  logging_config.py  requirements.txt  run.py
dev_logs/: 01_architecture_migration.md  02_hybrid_memory.md  03_openai_proxy_subconscious.md
docs/: README.md
donor/: emotion_manager.py  (+1 more)
sentio_engine/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
sentio_engine/config/: BeliefSystem.json  drives.json  emotions.json  engine_settings.json  feelings.json  llm_config.json
sentio_engine/config/personas/default/: manifest.py  system_prompt.txt
sentio_engine/sentio_engine/api/: main.py  proxy.py
sentio_engine/sentio_engine/cache/: redis_client.py
sentio_engine/sentio_engine/core/: engine.py
sentio_engine/sentio_engine/data/: database.py  mongo.py  repositories.py
sentio_engine/sentio_engine/llm/: client.py
sentio_engine/sentio_engine/personas/: manager.py
sentio_engine/sentio_engine/schemas/: sentio.proto  sentio_pb2.py
sentio_engine/tests/: integration_test.py  test_api.py  test_engine.py  test_mongo_integration.py  test_personality.py
sentio_engine/tests/api/: test_proxy_integrity.py
sentio_engine/tests/llm/: test_client.py  test_subconscious.py
sentio_engine/tests/personas/: test_manifest_logic.py
(+44 files in other folders)
