[project]
name = "sentio-engine"
version = "0.1.0"
description = "Sentio Engine for advanced AI emotional states."
authors = [
    {name = "Jules"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "protobuf (>=6.33.0,<7.0.0)",
    "grpcio-tools (>=1.76.0,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=7.0.0,<8.0.0)"
]


[tool.poetry]
packages = [{include = "sentio_engine"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "fakeredis (>=2.32.0,<3.0.0)",
    "pytest-docker (>=3.2.3,<4.0.0)"
]
